--- a/CSS/A12Cubertoweb.css
+++ b/CSS/A12Cubertoweb.css
@@ -1,10 +1,11 @@
-/* General Styles */
-body {
+body{
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f8ff; /* Un color lila muy claro como fondo general */
-    color: #333; /* Color de texto general */
+    background-color: #f8f8ff; 
+    
+    color: #333; 
+    
   }
   
   .container {
@@ -13,20 +14,19 @@ body {
     padding: 20px;
   }
   
-  /* Sección superior: Mobile Development */
   .top-section {
     padding: 20px 0;
   }
   
   .top-section h1 {
-    color: #008080; /* Teal color for the heading */
+    color: #008080;
     font-size: 2.5em;
     margin-bottom: 10px;
   }
   
   /* Sección Sleepiest */
   .sleepiest-section {
-    background-color: #f0f0ff; /* Un lila más claro para la sección Sleepiest */
+    background-color: #f0f0ff;
     padding: 20px;
     margin-bottom: 20px;
   }
@@ -49,12 +49,12 @@ body {
   .sleepiest-section img {
     width: 100%;
     margin-top: 15px;
-    border-radius: 8px; /* Bordes redondeados */
+    border-radius: 8px; 
   }
   
   /* Sección uLesson */
   .ulesson-section {
-    background-color: #f0f0ff; /* Un lila más claro para la sección uLesson */
+    background-color: #f0f0ff; 
     padding: 20px;
     margin-bottom: 20px;
   }
@@ -77,12 +77,12 @@ body {
   .ulesson-section img {
     width: 100%;
     margin-top: 15px;
-    border-radius: 8px; /* Bordes redondeados */
+    border-radius: 8px; 
   }
   
   /* Sección Genesis Vision */
   .genesis-section {
-    background-color: #f0f0ff; /* Un lila más claro para la sección Genesis Vision */
+    background-color: #f0f0ff; 
     padding: 20px;
   }
   
